--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
         }
     ],
     "require-dev": {
-        "orchestra/testbench": "^8.9",
         "phpunit/phpunit": "^10.3"
     },
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0",
-        "illuminate/auth": "^10.0"
+        "illuminate/auth": "^10.0",
+        "illuminate/contracts": "^10.20",
+        "lcobucci/jwt": "^5.0"
     }
 }
