--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "php": "^8.1",
         "illuminate/support": "^10.0",
         "illuminate/auth": "^10.0",
-        "illuminate/contracts": "^10.20",
-        "lcobucci/jwt": "^5.0"
+        "illuminate/contracts": "^10.20"
     }
 }
